[gd_scene load_steps=6 format=2]

[ext_resource path="res://Escenas/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Brightly Crush Shine.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.0352941, 0.152941, 0.807843, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -291.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.917647, 0.0745098, 0.462745, 1 )
custom_colors/font_outline_modulate = Color( 0.717647, 0.0588235, 0.580392, 1 )
text = "score :0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -371.0
margin_right = 371.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.854902, 0.121569, 0.54902, 1 )
custom_colors/font_outline_modulate = Color( 0.113725, 0.00784314, 0.819608, 1 )
text = "ARBURIA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -308.118
margin_top = -155.0
margin_right = 293.882
margin_bottom = -3.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.537255, 0.054902, 0.054902, 1 )
custom_colors/font_color = Color( 0.854902, 0.121569, 0.54902, 1 )
text = "Iniciar Aventura"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MsnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MsnTimer" to="." method="_on_MsnTimer_timeout"]
